<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.dxslm.view.activity.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="@dimen/y80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/touxiang5"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x40"
                android:paddingLeft="@dimen/x80"
                android:paddingRight="@dimen/x80"
                android:src="@drawable/dxslm"
                />
            <EditText
                android:id="@+id/et_login_username"
                android:layout_marginTop="@dimen/x40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x50"
                android:layout_marginRight="@dimen/x50"
                android:paddingLeft="@dimen/x10"
                android:hint="@string/username"
                android:background="@drawable/edittext"
                android:textColorHint="@color/colorHint" />
            <EditText
                android:id="@+id/et_login_paw"
                android:layout_marginTop="@dimen/y40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x50"
                android:layout_marginRight="@dimen/x50"
                android:inputType="textPassword"
                android:background="@drawable/edittext"
                android:paddingLeft="@dimen/x10"
                android:hint="@string/password"
                android:textColorHint="@color/colorHint" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
                <TextView
                    android:id="@+id/tv_login_find_paw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingBottom="@dimen/y20"
                    android:paddingRight="@dimen/x50"
                    android:paddingTop="@dimen/y20"
                    android:text="@string/wjma"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_login_confirm"
                    android:layout_marginLeft="@dimen/x40"
                    android:layout_marginRight="@dimen/x40"
                    android:layout_width="0dp"
                    android:background="@drawable/button_color_selector"
                    android:layout_weight="1"
                    android:layout_height="@dimen/y80"
                    android:text="@string/confirm"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login_register"
                android:layout_margin="@dimen/x40"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y80"
                android:background="@drawable/button_color_selector"
                android:text="@string/register"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
