<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/weixin_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="13dp">

            <ImageView
                android:id="@+id/image_weixin_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/comui_share_weixin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/share_weixin"
                android:textColor="@color/color_999999"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/moment_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="13dp">
            <ImageView
                android:id="@+id/image_weixin_moment_view"
                android:layout_width="50dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:background="@drawable/comui_share_weixin_pengyou"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/share_weixin_moment"
                android:textColor="@color/color_999999"
                android:textSize="13sp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/qq_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="13dp">
            <ImageView
                android:id="@+id/image_qq_view"
                android:layout_width="50dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:background="@drawable/comui_share_qq"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/share_qq"
                android:textColor="@color/color_999999"
                android:textSize="13sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/qzone_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="13dp">
            <ImageView
                android:id="@+id/image_qzone_view"
                android:layout_width="50dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:background="@drawable/comui_share_qqzone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/share_qzone"
                android:textColor="@color/color_999999"
                android:textSize="13sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/shoucang_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="13dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:background="@drawable/sc"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/share_shoucang"
                android:textColor="@color/color_999999"
                android:textSize="13sp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/cancel_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_color_selector"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp"/>
</LinearLayout>